--- a/requirements.txt
+++ b/requirements.txt
@@ -116,6 +116,8 @@ opentelemetry-semantic-conventions==0.55b1
 orjson==3.10.18
 overrides==7.7.0
 packaging==24.2
+panda==0.3.1
+pandas==2.3.0
 pandocfilters==1.5.1
 parso==0.8.4
 pexpect==4.9.0
@@ -140,6 +142,7 @@ pyproject_hooks==1.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-json-logger==3.3.0
+pytz==2025.2
 PyYAML==6.0.2
 pyzmq==27.0.0
 referencing==0.36.2
@@ -180,6 +183,7 @@ typer==0.16.0
 types-python-dateutil==2.9.0.20250516
 typing-inspection==0.4.1
 typing_extensions==4.14.1
+tzdata==2025.2
 uri-template==1.3.0
 urllib3==2.5.0
 uvicorn==0.35.0
